--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ body {
     color: black;
 }
 
-
 #nav-button a:hover {
     color: white;
     z-index: 2;
@@ -105,13 +104,13 @@ body {
 
 .center h1{
     font-size: 5vw;
-    line-height: 5vw;
+    line-height: 2vw;
     text-align: right;
 }
 
 .video-container {
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
     position: relative;
     overflow: hidden;
     margin-top: 3vw;
@@ -119,19 +118,19 @@ body {
 
 .video-container video{
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     object-fit: cover;
     border-radius: 30px;
 }
 
 .back-animation-container-1 {
-    z-index: 1;
+    z-index: -1;
 }
 
 .back-animation-1 {
     background:linear-gradient(red, rgb(255, 42, 0));
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     position: absolute;
     margin: -50 30px 10px 0;
     right: 30px;
@@ -143,8 +142,8 @@ body {
 
 .back-animation-2 {
     background:linear-gradient(red, rgb(255, 42, 0));
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     position: absolute;
     margin: -50 30px 10px 0;
     right: 30px;
@@ -156,8 +155,8 @@ body {
 
 .back-animation-3 {
     background:linear-gradient(red, rgb(255, 42, 0));
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     position: absolute;
     margin: -50 30px 10px 0;
     right: 30px;
